--- a/app/components/telegram-chat/styles.module.css
+++ b/app/components/telegram-chat/styles.module.css
@@ -48,6 +48,7 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
+	flex: 1;
 	width: 100%;
 	border-radius: 0 0 28px 28px;
 	margin-top: 12px;
@@ -72,6 +73,7 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
+	flex: 1;
 	height: 100%;
 	gap: 12px;
 }
